src/objects/Competitor_Product__c.object
<CustomObject>
    <fields>
        <fullName>Author__c</fullName>
        <description>This field identifies the author of the referenced competitor product</description>
        <formula>Product__r.Author__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Author</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copyright_Year__c</fullName>
        <description>The following field identifies the copyright year of the associated competitor product</description>
        <formula>Product__r.Copyright_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copyright Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edition__c</fullName>
        <description>This field identifies the edition of the associated competitor product</description>
        <formula>Product__r.Edition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitor Products</relationshipLabel>
        <relationshipName>Competitor_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Competitor product - Search result is restricted to only return competitor products.</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Competitor_Product__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.Market__c</field>
                <operation>equals</operation>
                <valueField>$User.Market__c</valueField>
            </filterItems>
            <filterItems>
                <field>Product2.Line_of_Business__c</field>
                <operation>equals</operation>
                <valueField>$User.Line_of_Business__c</valueField>
            </filterItems>
            <filterItems>
                <field>Product2.Business_Unit__c</field>
                <operation>equals</operation>
                <valueField>$User.Business_Unit__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Competitor Products</relationshipLabel>
        <relationshipName>Competitor_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <description>The following field identifies the publisher who published the identified competitor product</description>
        <formula>Product__r.Publisher__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publisher</label>
        <type>Text</type>
    </fields>
    <label>Competitor Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Competitor Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>